<resources>
    <string name="app_name">ViewDemo</string>
    <string name="share_demo_entry">Android 系统分享：文本链接</string>
    <string name="share_demo_title">系统分享</string>
    <string name="share_badge">DEMO</string>
    <string name="share_back">返回</string>
    <string name="share_eyebrow">ANDROID SHARESHEET</string>
    <string name="share_headline">分享文本链接</string>
    <string name="share_description">编辑下面的内容，然后交给 Android 系统分享面板，发送到微信、邮件或其他应用。</string>
    <string name="share_content_section">分享内容</string>
    <string name="share_content_hint">这些字段会组合成最终的文本消息。</string>
    <string name="share_title_label">标题</string>
    <string name="share_title_hint">输入分享标题</string>
    <string name="share_message_label">正文</string>
    <string name="share_message_hint">输入一段要分享的文字</string>
    <string name="share_link_label">链接</string>
    <string name="share_link_hint">https://example.com</string>
    <string name="share_default_title">ViewDemo 分享</string>
    <string name="share_default_message">这是一段通过 Android 系统分享能力发送的文本。</string>
    <string name="share_default_link">https://developer.android.com</string>
    <string name="share_preview_label">分享预览</string>
    <string name="share_action">打开系统分享面板</string>
    <string name="share_copy_action">复制分享文本</string>
    <string name="share_footer_hint">使用 ACTION_SEND + text/plain + EXTRA_TEXT</string>
    <string name="share_chooser_title">分享文本链接</string>
    <string name="share_link_required">请输入要分享的链接</string>
    <string name="share_no_app">当前设备没有可用的分享应用</string>
    <string name="share_clip_label">ViewDemo 分享文本</string>
    <string name="share_copied">分享文本已复制</string>
    <string name="navigation_detail_argument">收到参数：%1$s</string>
    <string name="navigation_confirmation_argument">确认参数：%1$s</string>
    <string name="view_last_get_global_visible_rect">view_last_get_global_visible_rect</string>
    <string name="news_content">新闻内容</string>
    <string name="TomHardy">汤姆·哈迪给人留下的最初印象是《兄弟连》和《黑鹰坠落》中英俊而带有几分邪气的美国大兵，但他是一位生在伦敦的英国演员。之后哈迪与盖尔·加西亚·贝纳尔合演了独立片《爱奴》，在南非拍摄《西蒙：一位英国退伍兵》，还在《星际迷航记之复仇女神》中出任反派，扮演毕凯舰长的复制人Shinzon一角为科幻迷所熟悉。\n
　　舞台剧方面，2003年哈迪荣获《标准晚报》颁发的新人奖，次年又被劳伦斯·奥利弗奖提名最佳新人。2004年他出演了马修·沃恩执导的英式黑帮片《夹心蛋糕》，与丹尼尔·克雷格、西椰娜·米勒以及本·威士肖同台。他还出演过电视剧《童贞女王-伊丽莎白一世》，以及电视片《吉昂的女儿》、《雾都孤儿》等。2008年凭借电视片《斯图尔特：逆行人生》被英国影视艺术学院奖提名最佳男演员。他将在新版的《呼啸山庄》中扮演希斯克里夫。\n
　　大银幕上，2008年哈迪亮相了盖·里奇的《摇滚帮》，还加盟了摩根·弗里曼、安东尼奥·班德拉斯主演的《亲密如贼》。他主演的动作片《布朗森》将在08年1月的圣丹斯电影节首映，他在片中的演技大受好评。\n
　　2009年，哈迪获邀加盟克里斯托弗·诺兰执导的大片《盗梦空间》，在其中饰演梦境伪造师伊姆斯，该片在2010年上映后的大热为哈迪铺就灿烂星路，顺利进军好莱坞。随后哈迪作品迭出，有爱情喜剧《情敌大战》、众星云集的《锅匠，裁缝，士兵，间谍》、经典童话黑暗版《白雪公主与猎人》、诺兰的《蝙蝠侠前传3：黑暗骑士崛起》、接棒梅尔·吉布森出演的《疯狂的麦克斯4》，前途不可限量。\n</string>

    <string name="ChristianBale">贝尔出生于英国的一个演艺世家，10岁就出演舞台剧，12岁出演电视剧。斯皮尔伯格筹拍《太阳帝国》时看中了他担任男主角，因而步上星途。第一个成人角色是在1992年的迪士尼歌舞片《摇摆狂潮》中载歌载舞。真正的突破是在《美国杀人魔》中饰演男主角，开始受到瞩目。2005年接下蝙蝠侠的斗篷，与克里斯托弗·诺兰合作《蝙蝠侠：开战时刻》(2005)和《蝙蝠侠前传2：黑暗骑士》(2008)，后者更是在全球掀起“蝙蝠”狂潮，以席卷姿态覆盖众多影迷，成为一时热议话题。除去《蝙蝠侠》系列，贝尔主演的其它影片如《致命魔术》、《决斗犹马镇》、《我不在那儿》等都是大导演强阵容的话题之作，可谓风头无两。2009年贝尔还有两部大作问世，分别是《终结者》第四部《终结者：救世军》和与约翰尼·德普联袂出演的《公众之敌》。</string>

    <string name="MarkWahlberg">马克·沃尔伯格的母亲名叫阿尔玛，父亲名叫唐纳德，他有5个哥哥和3个姐姐。出生于美国波士顿，高中时候退学，后获GED资格(一般教育考试)。做过各种各样的工作包括瓦工，甚至因几次违法而被判罪。后独立组建Marky Mark and Funky Bunch乐队发行两张摇滚唱片并巡回演出(《人民的音乐》和《你要相信》)。《完美摇摆》赢得最佳舞曲，这首歌直至今天仍然很流行。他在舞台上的魅力在他脱去衬衫和裤子的时候就更加无法抵挡。1992年，他成为著名时装设计师凯文·克莱恩的内衣模特。他和超级名模凯特·摩丝在一起拍摄的几乎全裸的广告照片则令他备受争议。\n
　　1992年之后马克开始投身电影业，但直到1997年才因主演了《不羁夜》一炮而红，其后他与周润发合演《再战边缘》，2000年的《惊涛骇浪》以及2001年的新版《人猿星球》让他正式成为巨星。近年陆续出演不少动作类型的影片如《偷天换日》、《四兄弟》等，主演的体育励志片《万夫莫敌》也取得了不错的票房成绩。2006年加盟马丁·斯科塞斯的《无间行者》，并获得奥斯卡最佳男配角提名.07年与杰昆·菲尼克斯合演犯罪题材的《我们拥有夜晚》，并在《生死狙击》中扮演一个身手了得的狙击手。08年主演的两部话题之作《灭顶之灾》和《马克思·佩恩》都未能取得好口碑。2009年在彼得·杰克逊的新片《可爱的骨头》中扮演一个失去爱女的悲痛父亲。2010年马克主演了喜剧片《二流警探》和剧情片《斗士》，还在史蒂夫·卡瑞尔和蒂娜·菲主演的喜剧片《约会之夜》中出演配角。</string>

    <string name="WillSmith">美国演员，高中毕业后痴心于歌唱事业，最后决定放弃上大学，做全职的艺人。1989年首次获得葛莱美奖“最佳饶舌歌演唱奖”。进而成为NBC电视影集《活力王子》(The Fresh Prince of Bel Air)的男主角。1993年以主角身份跃登大银幕，出演一部讽刺纽约知识分子的文艺片《六度分离》，片中他扮演一个自称是黑人巨星薜尼鲍迪儿子的老千。1995年主演警匪动作片《绝地战警》便一举成名，《独立日》、《黑超特警组》全球票房奏捷后，身价飙到巅峰。近几年接拍了许多卖座的动作片，包括《全民公敌》、《我，机器人》、《黑衣人2》、《全民情敌》等，始终为影迷爱戴。\n
　　2012年，威尔·史密斯带着新作《黑衣人3》强势归来。《黑衣人》系列是威尔·史密斯演员生涯的代表作之一，1997和2002年推出的《黑衣人》前两集在全球共计收获了超过10亿美元票房，也让威尔·史密斯与汤米·李·琼斯饰演的J、K这对黑超探员组合成为了科幻影史的经典形象之一。</string>

    <string name="DenzelWashington">丹泽尔·华盛顿出生于纽约州的弗农山，父亲是一位牧师，母亲是个美容师。14时，他父母的关系开始恶化，丹泽尔和他的姐姐被送进了一所寄宿学校。家庭的影响使华盛顿从小就养成了一种静默沉实的性格，不调皮胡闹，而是喜爱看书，给人一种老成稳重的感觉。\n　　　
　　1977年丹泽尔从富德汉姆大学毕业并获得了新闻学学士学位，毕业后他就去了旧金山，并在那里获得了美国音乐戏剧学院(ACT)的奖学金。他在美国国家戏剧学院学习了一年的表演，为他日后的成长打下了一个良好的基础。不久，丹泽尔·华盛顿便又回到了纽约。在大学期间就酷爱喜剧的他此时开始在各种电视剧中饰演角色。期间他曾参加了约瑟夫·佩珀导演的《莎士比亚》舞台剧的演出，饰演了一个颇有争议的人物理查三世。丹泽尔·华盛顿进入影坛后，出演了无数的角色，大都是正面光辉的形象。\n
　　1989年的《光荣》让他第一次声名远播，随后他的电影作品一部接着一部推出，1993年的《费城故事》和《塘鹅暗杀令》，1995年的《赤色风暴》，1996年的《生死豪情》，他在艺术影片与商业影片两个领域都有着不俗的表现。2001年丹泽尔·华盛顿主演的影片《训练日》终于让他成为了第二位获得奥斯卡影帝的黑人演员。近来事业一直保持良好状态，作品不断。</string>
    <string name="string_mitty_motto">To see the world, \nthings dangerous to come to, \nto see behind walls,\nto draw closer,\nto find each other and to feel.\nThat is the purpose of LIFE.\n开拓视野，冲破艰险，洞悉所有，贴近生活，寻找真爱，感受彼此。\n这就是人生的目的。</string>

    <string name="loading">正在加载...</string>
    <string name="handler_inner_thread_communicate">handler用于线程间通信</string>
    <string name="about_handler">关于Handler</string>
    <string name="test_handlerthread">测试HandlerThread的用法</string>
    <string name="test_asynctask">测试AsyncTask</string>
    <string name="asynctask_cancel">asyncTask cancel</string>
    <string name="test_time_selector">Test time selector</string>
    <string name="cancel">取消</string>
    <string name="confirm">confirm</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="show_time_selector">show time selector</string>
    <string name="please_choose_time">please choose time</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="about_scroller">about scroller</string>
    <string name="in_normal_layout">In normal layout</string>
    <string name="in_sw600_layout">in sw600 layout</string>
    <string name="can_not_use">can not use</string>
    <string name="long_label">扫描二维码</string>
    <string name="short_label">扫一扫</string>
    <string name="i_am_a_star">我是一颗小星星</string>
    <string name="a_star">小星星</string>
    <string name="use_horizontal_scroll_view">Use HorizontalScrollView</string>
    <string name="show_toast">show toast</string>
    <string name="show_custom_toast">展示自定义Toast</string>
    <string name="hour_minute_second_format">%1$s %2$s %3$s</string>


    <string name="input_user_nickname">请输入昵称</string>
    <string name="input_nickname">请输入昵称,不能为空且不能超过10个字</string>
    <string name="commit">确定</string>
    <string name="dynamic_set_drawable">动态设置Drawable</string>
    <string name="start_count_down">开始倒计时</string>

    <string name="fish_and_bear"> 鱼我所欲也，熊掌亦我所欲也，二正不可得兼，舍鱼而取熊掌者也。鱼我所欲也，熊熊掌亦我所欲也，二正不可得兼，舍鱼而取熊掌者也。鱼我所欲也，熊掌亦我所欲也，二正不可熊掌亦我所欲也，二正不可得兼，舍鱼而取熊掌者也。鱼我所欲也，熊掌亦我所欲也，二正不可掌亦我所欲也熊掌亦我所欲也，二舍鱼而取熊掌者也。鱼我所欲也，熊掌亦我所欲也，二舍鱼而取熊熊掌亦我所欲也，二舍鱼而取熊掌者也。鱼我所欲也，熊掌亦我所欲也，二舍鱼而取熊熊掌亦我所欲也，二舍鱼而取熊掌者也。鱼我所欲也，熊掌亦我所欲也，二舍鱼而取熊熊掌亦我所欲也，二舍鱼而取熊掌者也。鱼我所欲也，熊掌亦我所欲也，二舍鱼而取熊，二正不可得兼，舍鱼而取熊掌者也。鱼我所欲也，熊掌亦我所欲也，二正不可得兼，舍鱼而取熊掌者也。</string>

    <string-array name="citys">
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
        <item>郑州</item>
        <item>成都</item>
    </string-array>

    <string name="use_ttf_in_xml">
        在 Android 中，你可以在布局文件中直接使用 ttf 字体文件。首先，你需要将 ttf 文件放在 res/font 目录下。注意，这种方法需要 Android 8.0（API 级别 26）或更高版本。如果你需要在较旧的版本上使用自定义字体，你可能需要使用 Typeface 类在代码中设置字体。
    </string>
    <string name="long_text">
        千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉.千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉...
        千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉.千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉...
        千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉.千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉...
        千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉.千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉...
        千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉.千山茶客原创古风小说《重生之将门毒后》中的男主角。明齐临安侯府的小侯爷，字景行。明齐临安侯府的小侯爷，真实身份为大凉...结尾
    </string>


    <string name="long_text1">long_text1\nlong_text2\nlong_text3\nlong_text4
    </string>
    <string name="long_text_poem">山光悦鸟性，潭影空人心。 苍苍竹林寺，杳杳钟声晚。 浮光跃金，静影沉璧。 渔舟唱晚，响穷彭蠡之滨； 雁阵惊寒，声断衡阳之浦。 遥襟甫畅，逸兴遄飞。 爽籁发而清风生，纤歌凝而白云遏。 爽籁发而清风生，纤歌凝而白云遏。</string>

    <string name="char_invite_who">您会邀请谁到你的岛上来呢？</string>

</resources>
