<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.hm.viewdemo.activity.TestHandlerAsyncTaskActivity">

        <Button
            android:id="@+id/btn_asynctask_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/test_asynctask"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_asynctask_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/asynctask_cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_handler_inner_thread_communicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/handler_inner_thread_communicate"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_start_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_finish_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_test_handler_thread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="click"
            android:text="@string/test_handlerthread"
            android:textAllCaps="false" />

    </LinearLayout>
</layout>

